--- a/index.html
+++ b/index.html
@@ -1,63 +1,54 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="refresh" content="0; url=http://www.ciebasinga.com/" />
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        	h1 {
+        	  font: italic 7vmin BauerBodoni-italic;
+        	}
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+        	h2 {
+        	  font-family: BauerBodoni-italic, sans-serif;
+        	  font-size: 5vmin;
+        	}
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title>"Basinga"</title>
-    <link href="stylesheets/all.css" rel="stylesheet" type="text/css" />
-    <link href="stylesheets/vendor-print/fullcalendar.print.css" rel="stylesheet" type="text/css" media="print" />
-    <script src="javascripts/all.js" type="text/javascript"></script>
-  </head>
+        	p{
+        	  font-family: 'Advent Pro', sans-serif;
+        	  font-size: 2.5vmin;
+        	  font-weigth: 400;
+        	}
 
-  <body class="index">
-    <nav class="navbar-basinga">
-  <div class='container-fluid'>
-    <div class='row-fluid'>
-      <div class='col-xs-12'>
-        <ul class='pull-right' role='menu'>
-            <li>
-              <a href="/">Fr</a>
-        </ul>
-        <img id="logo" src="images/logo/logo_def_noir-04.png" />
-      <ul id='navigation'>
-        <li><a href="en/home.html">ABOUT US</a></li>
-        <li><a href="en/gallery.html">PRODUCTION</a></li>
-        <li><a href="en/blog.html">NEWS</a></li>
-        <li><a href="en/contact.html">CONTACT</a></li>
-      </ul>
-      </div>
-    </div>
-  </div>
-</nav>
+        	body{
+        	  overflow-x: hidden;
+        	  background-color: #d0d0cf;
+        	}
 
+        	body, html {
+        		height: 100%;
+        		width: 100%;
+        	}
 
-    <a href="fr/home.html">  <div id='index'>
-    <div class='visible-sm visible-md visible-lg'>
-  <video autoplay id="index__video">
-    <source src="video/preambule_basinga.mp4" type="video/mp4">
-      <img class="img-responsive" src="video/funambule.jpg" />
-  </video>
-  </div>
-    <div class='visible-xs'>
-      <img class="img-responsive" id="index__photo" src="video/funambule.jpg" />
-    </div>
-    </div>
-</a><img class="img-responsive" src="video/funambule.jpg" />
-<script type='text/javascript'>
+        	#main {
+        		position: absolute;
+        		top: calc(50% - 15px);
+        		width: 100%;
+        		text-align: center;
+        		font-size: 30px;
+        	}
 
-$(document).ready( function () {
-video = document.getElementById('index__video');
-video.addEventListener('ended',function() {
-window.location.href = 'fr/home.html';})
-});
-
-</script>
-
-
-
-  </body>
+        	#main a, a:hover, a:active, a:visited 
+        	{
+        		color: black;
+        	}
+        </style>
+    </head>
+    <body>
+		<div id="main">
+		    <a href="http://www.ciebasinga.com">Notre site a démenagé, retrouvez nous sur ciebasinga.com</a>
+		</div>
+    </body>
 </html>
